<resources>
    <string name="app_name">Alojamientos</string>
    <string name="resultado_busqueda">Resultado busqueda fragment</string>
    <string name="form_busqueda">FORMULARIO busqueda fragment</string>
    <string name="detalle_alojamiento">DETALLE alojamiento fragment</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_favoritos">Favoritos</string>
    <string name="action_reservas">Reservas</string>
    <string name="action_config">Configuracion</string>
    <string name="boton_hotel">Hotel</string>
    <string name="boton_departamento">Departamento</string>
    <string name="tipo_alojam">Tipo de alojamiento</string>
    <string name="cant_personas">Capacidad</string>
    <string name="wifi">Servicio Wifi</string>
    <string name="ciudad">Ubicacion</string>
    <string name="rango_precios">Precio</string>
    <string name="button_buscar">Buscar</string>
    <string name="button_resetear">Resetear</string>
    <string name="button_nuevaBusqueda">Nueva busqueda</string>
    <string name="textView_Alojamiento">Alojamiento</string>
    <string name="textView_Precio">Precio:</string>
    <string name="textView_DescripcionAlojamiento">Descripcion:</string>
    <string name="textView_CapacidadAlojamiento">Capacidad:</string>
    <string name="switch_Reservar">¿Realizar reserva?</string>
    <string name="textView_FechaIngreso">Fecha de ingreso</string>
    <string name="textView_FechaSalida">Fecha de salida</string>
    <string name="button_RealizarReserva">Reservar</string>
    <string name="textView_CantidadPersonas">Cantidad de personas</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>